fix section header overlapping hyperlinks

--- a/src/static/stylus/list_item.styl
+++ b/src/static/stylus/list_item.styl
@@ -29,6 +29,8 @@
     .highlight-header {
         width 100%
         position relative
+        max-height: 50px;
+        margin-bottom: 65px;
         // max-height 55px
 
         .highlight-title {
